--- a/app/components/login/login.html
+++ b/app/components/login/login.html
@@ -11,8 +11,10 @@
 
     <title>UusÕIS</title>
 
+    <!-- ==== STYLESHEETS ==== -->
+
     <!-- Login custom CSS-->
-    <link href="../../../dist/css/login.css" rel="stylesheet">
+    <link href="login.css" rel="stylesheet">
 
     <!-- Bootstrap Core CSS -->
     <link href="../../../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -26,17 +28,7 @@
     <!-- Custom Fonts -->
     <link href="../../../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <!-- AngularJS setup -->
-    <script src="../../../js/angular.min.js"></script>
-
-    <!-- Bower components -->
-    <script src="../../../bower_components/angular-route/angular-route.js"></script>
-    <script src="../../../bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="../../../bower_components/angular-touch/angular-touch.min.js"></script>
-
-    <script src="../../../app/app.js"></script>
-    <script src="../../../app/components/login/loginController.js"></script>
-
+    <!-- ==== END OF STYLESHEETS ==== -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -49,112 +41,161 @@
 
 <body ng-controller="loginController">
 
-<div class="container">
-    <div class="row">
-        <!--<div class="col-md-4 col-md-offset-4">-->
-        <!--<div class="login-panel panel panel-default">-->
-        <!--<div class="panel-heading">-->
-        <!--<h3 class="panel-title">Tere tulemast!</h3>-->
+<div class="body"></div>
+<div class="grad"></div>
+<div class="header">
+    <div class="noselect">Tallinna Tehnikaülikool<span class="noselect"> - ÕIS</span></div>
+</div>
+<br>
+<div class="login">
+    <!-- ============ FORM ============ -->
+    <form name="loginForm" ng-submit="submitForm(email, password)" novalidate>
+
+        <!-- EMAIL -->
+        <!--<div class="form-group" required>-->
+        <!--&lt;!&ndash;<label>Email</label>&ndash;&gt;-->
+        <input type="email"
+               placeholder="{{ emailHint }}"
+               name="email"
+               class="form-control"
+               ng-model="email"
+               ng-model-options="{ updateOn: 'blur' }"
+               ng-click="hideEmailFieldEmptyErrorMessage()">
+        <p class="error" ng-show="loginForm.email.$invalid && !loginForm.email.$pristine && loginForm.email.$touched"
+           class="help-block">
+            Palun sisesta korrektne email. N: xxx@xxx.xxx</p>
+        <p class="error" ng-show="emailFieldEmpty"
+           ng-if="!(loginForm.email.$invalid && !loginForm.email.$pristine && loginForm.email.$touched)">{{
+            emailFieldEmptyErrorMessage }}</p>
         <!--</div>-->
-        <!--<div class="panel-body">-->
-        <!--<form name="form" role="form">-->
-        <!--<fieldset>-->
+
+        <!-- PASSWORD -->
+        <!--<div class="form-group" required-->
+        <!--ng-class="{ 'has-error' : loginForm.password.$invalid && !loginForm.password.$pristine }">-->
+        <!--<label>Parool</label>-->
+        <input type="password"
+               placeholder="{{ passwordHint }}"
+               name="password"
+               class="form-control"
+               ng-model="password"
+               ng-click="hidePasswordFieldEmptyErrorMessage()"
+        >
+        <p class="error" ng-show="passwordFieldEmpty">{{ passwordFieldEmptyErrorMessage}}</p>
+        <!--<p ng-show="passwordWasNotFilled"> {{ passwordWasNotFilledMessage }}</p>-->
+        <!--ng-minlength="3" ng-maxlength="8"-->
+        <!--<p ng-show="loginForm.password.$error.minlength" class="help-block">Password is too short.</p>-->
+        <!--<p ng-show="loginForm.password.$error.maxlength" class="help-block">Password is too long.</p>-->
+        <!--</div>-->
+
         <!--<div class="form-group">-->
-        <!--<input class="form-control" placeholder="{{ emeil }}" type="email" ng-model="email"-->
-        <!--autofocus>-->
-        <!--</div>-->
-        <!--<div class="form-group">-->
-        <!--<input class="form-control" placeholder="{{ parool }}" type="password"-->
-        <!--ng-model="password" value="">-->
-        <!--</div>-->
         <!--<div class="checkbox">-->
         <!--<label>-->
-        <!--<input name="remember" type="checkbox" value="Remember Me">Jäta mind meelde-->
+        <!--<input name="remember" type="checkbox" value="Remember Me" ng-model="user.remember">Jäta-->
+        <!--mind meelde-->
         <!--</label>-->
         <!--</div>-->
         <!--<div class="etc-login-form">-->
         <!--<p>Unustasid parooli? <a href="#">lähtesta</a></p>-->
         <!--<p>Uus kasutaja? <a href="../register/register.html">registreeru</a></p>-->
         <!--</div>-->
-        <!--&lt;!&ndash; Change this to a button or input when using this as a form &ndash;&gt;-->
-        <!--<button ng-click="login()" class="btn btn-lg btn-success btn-block">Logi sisse</button>-->
-        <!--</fieldset>-->
-        <!--</form>-->
-        <!--</div>-->
-        <!--</div>-->
         <!--</div>-->
 
-        <div class="col-md-4 col-md-offset-4">
-            <div class="login-panel panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Tere tulemast!</h3>
-                </div>
-                <div class="panel-body">
+        <input type="submit" value="{{failedLogin}}">
 
-                    <!-- ============ FORM ============ -->
+        <a class="help" href="#">Unustasid parooli?</a>
+        <a class="help" href="../register/register.html">Registreeru</a>
 
-                    <form name="loginForm" ng-submit="submitForm(email, password)" novalidate>
+    </form>
 
-                        <!-- EMAIL -->
-                        <div class="form-group" required>
-                            <!--<label>Email</label>-->
-                            <input type="email"
-                                   placeholder="{{ emailHint }}"
-                                   name="email" class="form-control"
-                                   ng-model="email"
-                                   ng-model-options="{ updateOn: 'blur' }"
-                                   ng-click="hideErrorMessages()">
-                            <p ng-show="loginForm.email.$invalid && !loginForm.email.$pristine && loginForm.email.$touched"
-                               class="help-block">
-                                Palun sisesta korrektne email. N: xxx@xxx.xxx</p>
-                            <p ng-show="emailFieldEmpty">{{ emailFieldEmptyErrorMessage }}</p>
-                        </div>
-
-                        <!-- PASSWORD -->
-                        <div class="form-group" required
-                             ng-class="{ 'has-error' : loginForm.password.$invalid && !loginForm.password.$pristine }">
-                            <!--<label>Parool</label>-->
-                            <input type="password"
-                                   placeholder="{{ passwordHint }}"
-                                   name="password"
-                                   class="form-control"
-                                   ng-model="password"
-                                   ng-click="hideErrorMessages()"
-                            >
-                            <p ng-show="passwordFieldEmpty">{{ passwordFieldEmptyErrorMessage}}</p>
-                            <!--<p ng-show="passwordWasNotFilled"> {{ passwordWasNotFilledMessage }}</p>-->
-                            <!--ng-minlength="3" ng-maxlength="8"-->
-                            <!--<p ng-show="loginForm.password.$error.minlength" class="help-block">Password is too short.</p>-->
-                            <!--<p ng-show="loginForm.password.$error.maxlength" class="help-block">Password is too long.</p>-->
-                        </div>
-
-                        <div class="form-group">
-                            <div class="checkbox">
-                                <label>
-                                    <input name="remember" type="checkbox" value="Remember Me" ng-model="user.remember">Jäta
-                                    mind meelde
-                                </label>
-                            </div>
-                            <div class="etc-login-form">
-                                <p>Unustasid parooli? <a href="#">lähtesta</a></p>
-                                <p>Uus kasutaja? <a href="../register/register.html">registreeru</a></p>
-                            </div>
-                        </div>
-
-                        <button type="submit" class="btn btn-lg btn-success btn-block">Logi sisse</button>
-
-                    </form>
-
-                    <!-- =========== END OF FORM ========== -->
-
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- =========== END OF FORM ========== -->
 </div>
+
+<!--<div class="container">-->
+<!--<div class="row">-->
+
+<!--<div class="col-md-4 col-md-offset-4">-->
+<!--<div class="login-panel panel panel-default">-->
+<!--<div class="panel-heading">-->
+<!--<h3 class="panel-title">Tere tulemast!</h3>-->
+<!--</div>-->
+<!--<div class="panel-body">-->
+
+<!--&lt;!&ndash; ============ FORM ============ &ndash;&gt;-->
+
+<!--<form name="loginForm" ng-submit="submitForm(email, password)" novalidate>-->
+
+<!--&lt;!&ndash; EMAIL &ndash;&gt;-->
+<!--<div class="form-group" required>-->
+<!--&lt;!&ndash;<label>Email</label>&ndash;&gt;-->
+<!--<input type="email"-->
+<!--placeholder="{{ emailHint }}"-->
+<!--name="email" class="form-control"-->
+<!--ng-model="email"-->
+<!--ng-model-options="{ updateOn: 'blur' }"-->
+<!--ng-click="hideErrorMessages()">-->
+<!--<p ng-show="loginForm.email.$invalid && !loginForm.email.$pristine && loginForm.email.$touched"-->
+<!--class="help-block">-->
+<!--Palun sisesta korrektne email. N: xxx@xxx.xxx</p>-->
+<!--<p ng-show="emailFieldEmpty">{{ emailFieldEmptyErrorMessage }}</p>-->
+<!--</div>-->
+
+<!--&lt;!&ndash; PASSWORD &ndash;&gt;-->
+<!--<div class="form-group" required-->
+<!--ng-class="{ 'has-error' : loginForm.password.$invalid && !loginForm.password.$pristine }">-->
+<!--&lt;!&ndash;<label>Parool</label>&ndash;&gt;-->
+<!--<input type="password"-->
+<!--placeholder="{{ passwordHint }}"-->
+<!--name="password"-->
+<!--class="form-control"-->
+<!--ng-model="password"-->
+<!--ng-click="hideErrorMessages()"-->
+<!--&gt;-->
+<!--<p ng-show="passwordFieldEmpty">{{ passwordFieldEmptyErrorMessage}}</p>-->
+<!--&lt;!&ndash;<p ng-show="passwordWasNotFilled"> {{ passwordWasNotFilledMessage }}</p>&ndash;&gt;-->
+<!--&lt;!&ndash;ng-minlength="3" ng-maxlength="8"&ndash;&gt;-->
+<!--&lt;!&ndash;<p ng-show="loginForm.password.$error.minlength" class="help-block">Password is too short.</p>&ndash;&gt;-->
+<!--&lt;!&ndash;<p ng-show="loginForm.password.$error.maxlength" class="help-block">Password is too long.</p>&ndash;&gt;-->
+<!--</div>-->
+
+<!--<div class="form-group">-->
+<!--<div class="checkbox">-->
+<!--<label>-->
+<!--<input name="remember" type="checkbox" value="Remember Me" ng-model="user.remember">Jäta-->
+<!--mind meelde-->
+<!--</label>-->
+<!--</div>-->
+<!--<div class="etc-login-form">-->
+<!--<p>Unustasid parooli? <a href="#">lähtesta</a></p>-->
+<!--<p>Uus kasutaja? <a href="../register/register.html">registreeru</a></p>-->
+<!--</div>-->
+<!--</div>-->
+
+<!--<button type="submit" class="btn btn-lg btn-success btn-block">Logi sisse</button>-->
+
+<!--</form>-->
+
+<!--&lt;!&ndash; =========== END OF FORM ========== &ndash;&gt;-->
+
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 
 <!-- jQuery -->
 <script src="../../../bower_components/jquery/dist/jquery.min.js"></script>
+
+<!-- AngularJS setup -->
+<script src="../../../js/angular.min.js"></script>
+
+<!-- Bower components -->
+<script src="../../../bower_components/angular-route/angular-route.js"></script>
+<script src="../../../bower_components/angular-animate/angular-animate.min.js"></script>
+<script src="../../../bower_components/angular-touch/angular-touch.min.js"></script>
+<script src="../../../bower_components/angular-smart-table/dist/smart-table.min.js"></script>
+
+<script src="../../../app/app.js"></script>
+<script src="../../../app/components/login/loginController.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
 <script src="../../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -166,9 +207,38 @@
 <!-- Metis Menu Plugin JavaScript -->
 <script src="../../../bower_components/metisMenu/dist/metisMenu.min.js"></script>
 
-<!-- Custom Theme JavaScript -->
-<script src="../../../dist/js/sb-admin-2.js"></script>
-
 </body>
 
 </html>
+<!--<div class="col-md-4 col-md-offset-4">-->
+<!--<div class="login-panel panel panel-default">-->
+<!--<div class="panel-heading">-->
+<!--<h3 class="panel-title">Tere tulemast!</h3>-->
+<!--</div>-->
+<!--<div class="panel-body">-->
+<!--<form name="form" role="form">-->
+<!--<fieldset>-->
+<!--<div class="form-group">-->
+<!--<input class="form-control" placeholder="{{ emeil }}" type="email" ng-model="email"-->
+<!--autofocus>-->
+<!--</div>-->
+<!--<div class="form-group">-->
+<!--<input class="form-control" placeholder="{{ parool }}" type="password"-->
+<!--ng-model="password" value="">-->
+<!--</div>-->
+<!--<div class="checkbox">-->
+<!--<label>-->
+<!--<input name="remember" type="checkbox" value="Remember Me">Jäta mind meelde-->
+<!--</label>-->
+<!--</div>-->
+<!--<div class="etc-login-form">-->
+<!--<p>Unustasid parooli? <a href="#">lähtesta</a></p>-->
+<!--<p>Uus kasutaja? <a href="../register/register.html">registreeru</a></p>-->
+<!--</div>-->
+<!--&lt;!&ndash; Change this to a button or input when using this as a form &ndash;&gt;-->
+<!--<button ng-click="login()" class="btn btn-lg btn-success btn-block">Logi sisse</button>-->
+<!--</fieldset>-->
+<!--</form>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
