--- a/app/components/register/register.html
+++ b/app/components/register/register.html
@@ -11,8 +11,10 @@
 
     <title>Registreeri</title>
 
+    <!-- ==== STYLESHEETS ==== -->
+
     <!-- Register custom CSS-->
-    <link href="../../../dist/css/register.css" rel="stylesheet">
+    <link href="register.css" rel="stylesheet">
 
     <!-- Bootstrap Core CSS -->
     <link href="../../../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -26,17 +28,7 @@
     <!-- Custom Fonts -->
     <link href="../../../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <!-- AngularJS setup -->
-    <script src="../../../js/angular.min.js"></script>
-
-    <!-- Bower components -->
-    <script src="../../../bower_components/angular-route/angular-route.js"></script>
-    <script src="../../../bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="../../../bower_components/angular-touch/angular-touch.min.js"></script>
-
-    <script src="../../../app/app.js"></script>
-    <script src="../../../app/components/register/registerController.js"></script>
-
+    <!-- ==== END OF STYLESHEETS ==== -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -49,63 +41,149 @@
 
 <body ng-controller="registerController">
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="login-panel panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Registreeru</h3>
-                </div>
-                <div class="panel-body">
-                    <form role="form">
-                        <fieldset>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="{{ emeil }}" name="email" type="email"
-                                       autofocus>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="{{ parool }}" name="password" type="password"
-                                       value="">
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="{{ parooluuesti }}" name="passwordconfirm"
-                                       type="password" value="">
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="{{ eesnimi }}" name="eesnimi" type="text"
-                                       value="">
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="{{ perekonnanimi }}" name="perekonnanimi"
-                                       type="text" value="">
-                            </div>
-                            <div class="form-group">
-                                <select class="form-control" id="sel1">
-                                    <option>Õpilane</option>
-                                    <option>Õpetaja</option>
-                                </select>
-                            </div>
-                            <div class="form-group login-group-checkbox">
-                                <input type="checkbox" class="" id="reg_agree" name="reg_agree">
-                                <label for="reg_agree">Nõustun <a href="#" target="popup"
-                                                                  onclick="window.open('termsandcontitions.html','Tingimused','width=600,height=400')">tingimustega</a></label>
-                            </div>
-                            <p>Oled juba kasutaja? <a href="../login/login.html">logi sisse</a></p>
-                            <!-- Change this to a button or input when using this as a form -->
-                            <a href="../home/home.html" class="btn btn-lg btn-success btn-block">Registreerin</a>
-                        </fieldset>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="body"></div>
+<div class="grad"></div>
+<div class="header">
+    <div class="noselect">Tallinna Tehnikaülikool<span class="noselect"> - ÕIS</span></div>
 </div>
+<br>
+<div class="login">
+    <!-- ============ FORM ============ -->
+    <form name="registerForm" ng-submit="submitForm(email, password)" novalidate>
+
+        <!-- EMAIL -->
+        <input type="email"
+               placeholder="{{ emailHint }}"
+               name="email"
+               class="form-control"
+               ng-model="email"
+               ng-model-options="{ updateOn: 'blur' }"
+               ng-click="hideErrorMessages()">
+        <p class="error"
+           ng-show="registerForm.email.$invalid && !registerForm.email.$pristine && registerForm.email.$touched"
+           class="help-block">
+            Palun sisesta korrektne email. N: juulius@ttu.ee</p>
+        <p class="error" ng-show="emailFieldEmpty">{{ emailFieldEmptyErrorMessage }}</p>
+
+        <!-- PASSWORD -->
+        <input type="password"
+               placeholder="{{ passwordHint }}"
+               name="password"
+               class="form-control"
+               ng-model="password"
+               ng-click="hideErrorMessages()"
+        >
+        <p class="error" ng-show="passwordFieldEmpty">{{ passwordFieldEmptyErrorMessage}}</p>
+
+        <!-- PASSWORD AGAIN -->
+        <input type="password"
+               placeholder="{{ passwordAgainHint }}"
+               name="passwordAgain"
+               class="form-control"
+               ng-model="passwordAgain"
+               ng-click="hideErrorMessages()"
+        >
+        <p class="error" ng-show="passwordAgainFieldEmpty">{{ passwordAgainFieldEmptyErrorMessage}}</p>
+
+        <!-- EESNIMI -->
+        <input type="text"
+               placeholder="{{ firstnameHint }}"
+               name="firstname"
+               class="form-control"
+               ng-model="firstname"
+               ng-click="hideErrorMessages()"
+        >
+        <p class="error" ng-show="firstnameFieldEmpty">{{ firstnameFieldEmptyErrorMessage}}</p>
+
+        <!-- PEREKONNANIMI -->
+        <input type="text"
+               placeholder="{{ lastnameHint }}"
+               name="lastname"
+               class="form-control"
+               ng-model="lastname"
+               ng-click="hideErrorMessages()"
+        >
+        <p class="error" ng-show="lastnameFieldEmpty">{{ lastnameFieldEmptyErrorMessage}}</p>
+
+        <select class="option" id="sel1">
+            <option ng-model="student">Õpilane</option>
+            <option ng-model="teacher">Õpetaja</option>
+        </select>
+
+        <input type="submit" value="Registreeru">
+
+        <a class="help" href="../login/login.html">Oled juba kasutaja? Logi sisse.</a>
+    </form>
+
+    <!-- =========== END OF FORM ========== -->
+</div>
+
+<!--<div class="container">-->
+<!--<div class="row">-->
+<!--<div class="col-md-4 col-md-offset-4">-->
+<!--<div class="login-panel panel panel-default">-->
+<!--<div class="panel-heading">-->
+<!--<h3 class="panel-title">Registreeru</h3>-->
+<!--</div>-->
+<!--<div class="panel-body">-->
+<!--<form role="form">-->
+<!--<fieldset>-->
+<!--<div class="form-group">-->
+<!--<input class="form-control" placeholder="{{ emeil }}" name="email" type="email"-->
+<!--autofocus>-->
+<!--</div>-->
+<!--<div class="form-group">-->
+<!--<input class="form-control" placeholder="{{ parool }}" name="password" type="password"-->
+<!--value="">-->
+<!--</div>-->
+<!--<div class="form-group">-->
+<!--<input class="form-control" placeholder="{{ parooluuesti }}" name="passwordconfirm"-->
+<!--type="password" value="">-->
+<!--</div>-->
+<!--<div class="form-group">-->
+<!--<input class="form-control" placeholder="{{ eesnimi }}" name="eesnimi" type="text"-->
+<!--value="">-->
+<!--</div>-->
+<!--<div class="form-group">-->
+<!--<input class="form-control" placeholder="{{ perekonnanimi }}" name="perekonnanimi"-->
+<!--type="text" value="">-->
+<!--</div>-->
+<!--<div class="form-group">-->
+<!--<select class="form-control" id="sel1">-->
+<!--<option>Õpilane</option>-->
+<!--<option>Õpetaja</option>-->
+<!--</select>-->
+<!--</div>-->
+<!--<div class="form-group login-group-checkbox">-->
+<!--<input type="checkbox" class="" id="reg_agree" name="reg_agree">-->
+<!--<label for="reg_agree">Nõustun <a href="#" target="popup"-->
+<!--onclick="window.open('termsandcontitions.html','Tingimused','width=600,height=400')">tingimustega</a></label>-->
+<!--</div>-->
+<!--<p>Oled juba kasutaja? <a href="../login/login.html">logi sisse</a></p>-->
+<!--&lt;!&ndash; Change this to a button or input when using this as a form &ndash;&gt;-->
+<!--<a href="../home/home.html" class="btn btn-lg btn-success btn-block">Registreerin</a>-->
+<!--</fieldset>-->
+<!--</form>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 
 <!-- jQuery -->
 <script src="../../../bower_components/jquery/dist/jquery.min.js"></script>
 
-<!-- Bootstrap Core JavaScript -->
-<script src="../../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<!-- AngularJS setup -->
+<script src="../../../js/angular.min.js"></script>
+
+<!-- Bower components -->
+<script src="../../../bower_components/angular-route/angular-route.js"></script>
+<script src="../../../bower_components/angular-animate/angular-animate.min.js"></script>
+<script src="../../../bower_components/angular-touch/angular-touch.min.js"></script>
+<script src="../../../bower_components/angular-smart-table/dist/smart-table.min.js"></script>
+
+<script src="../../../app/app.js"></script>
+<script src="../../../app/components/register/registerController.js"></script>
 
 <!-- Bootstrap Core AngularJS -->
 <script src="../../../bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
@@ -114,8 +192,8 @@
 <!-- Metis Menu Plugin JavaScript -->
 <script src="../../../bower_components/metisMenu/dist/metisMenu.min.js"></script>
 
-<!-- Custom Theme JavaScript -->
-<script src="../../../dist/js/sb-admin-2.js"></script>
+<!-- Bootstrap Core JavaScript -->
+<script src="../../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
 
